[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/GUI/XP and Level/Level Up Screen.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/misc/move sound 2.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/misc/Level up!.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Shaders/Burn Shader Effect.tres" type="Material" id=4]
[ext_resource path="res://assets/UI/XP and Level/Level Up.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/XP and Level/Level Up Panel.png" type="Texture" id=6]
[ext_resource path="res://assets/font/Action Selector Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/GUI/XP and Level/More Stat Arrow.tscn" type="PackedScene" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "fade in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Level Up Screen" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="Stat Up Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.0

[node name="Level Up Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Level Up Logo" type="Sprite" parent="."]
visible = false
material = ExtResource( 4 )
position = Vector2( 121, 59 )
scale = Vector2( 0.264649, 0.282043 )
z_index = 4
texture = ExtResource( 5 )
region_rect = Rect2( 222, 53, 516, 133 )

[node name="anim" type="AnimationPlayer" parent="Level Up Logo"]
"anims/fade in" = SubResource( 1 )

[node name="Level Up Panel" type="Control" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Level Up Background" type="TextureRect" parent="Level Up Panel"]
margin_left = 15.0
margin_top = 53.0
margin_right = 772.0
margin_bottom = 691.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="Class" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 126.667
margin_top = 93.3333
margin_right = 321.667
margin_bottom = 143.333
custom_fonts/font = ExtResource( 7 )
text = "Paladin"
align = 1
valign = 1

[node name="Level" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 446.667
margin_top = 93.3333
margin_right = 584.667
margin_bottom = 143.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Level Arrow" parent="Level Up Panel/Level Up Background/Level" instance=ExtResource( 8 )]
visible = false
position = Vector2( 140, 26.6667 )

[node name="HP" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 180.0
margin_top = 253.333
margin_right = 318.0
margin_bottom = 303.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="HP Arrow" parent="Level Up Panel/Level Up Background/HP" instance=ExtResource( 8 )]
visible = false
position = Vector2( 140, 20 )

[node name="Luck" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 506.667
margin_top = 253.333
margin_right = 644.667
margin_bottom = 303.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Luck Arrow" parent="Level Up Panel/Level Up Background/Luck" instance=ExtResource( 8 )]
visible = false
position = Vector2( 133.333, 20.0001 )

[node name="Str" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 180.0
margin_top = 333.333
margin_right = 318.0
margin_bottom = 383.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Str Arrow" parent="Level Up Panel/Level Up Background/Str" instance=ExtResource( 8 )]
visible = false
position = Vector2( 140, 20 )

[node name="Def" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 506.667
margin_top = 333.333
margin_right = 644.667
margin_bottom = 383.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Def Arrow" parent="Level Up Panel/Level Up Background/Def" instance=ExtResource( 8 )]
visible = false
position = Vector2( 133.333, 20.0001 )

[node name="Skill" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 180.0
margin_top = 413.333
margin_right = 318.0
margin_bottom = 463.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Skill Arrow" parent="Level Up Panel/Level Up Background/Skill" instance=ExtResource( 8 )]
visible = false
position = Vector2( 140, 20.0001 )

[node name="Res" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 506.667
margin_top = 413.333
margin_right = 644.667
margin_bottom = 463.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Res Arrow" parent="Level Up Panel/Level Up Background/Res" instance=ExtResource( 8 )]
visible = false
position = Vector2( 133.333, 20.0001 )

[node name="Spd" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 180.0
margin_top = 493.333
margin_right = 318.0
margin_bottom = 543.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Spd Arrow" parent="Level Up Panel/Level Up Background/Spd" instance=ExtResource( 8 )]
visible = false
position = Vector2( 140, 20 )

[node name="Con" type="Label" parent="Level Up Panel/Level Up Background"]
margin_left = 506.667
margin_top = 493.333
margin_right = 644.667
margin_bottom = 543.333
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1

[node name="Con Arrow" parent="Level Up Panel/Level Up Background/Con" instance=ExtResource( 8 )]
visible = false
position = Vector2( 133.333, 20 )

[node name="Unit Mugshot" type="TextureRect" parent="Level Up Panel"]
margin_left = 151.0
margin_top = 86.0
margin_right = 225.0
margin_bottom = 159.0
texture = ExtResource( 9 )
expand = true

[node name="anim" type="AnimationPlayer" parent="Level Up Panel"]
"anims/fade in" = SubResource( 2 )

[node name="Return" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Show Pause" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Bring Panel Up" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Return" to="." method="_on_Return_timeout"]
[connection signal="timeout" from="Show Pause" to="." method="_on_Show_Pause_timeout"]
[connection signal="timeout" from="Bring Panel Up" to="." method="_on_Bring_Panel_Up_timeout"]
